# clrender

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/common/: Color.h  FrameBuffer.cc  FrameBuffer.h  Geometry.h  ObjParser.cc  ObjParser.h  glm.h
src/cxxrender/: CXXPipe.cc  CXXPipe.h  Shaders.h
